@@ -95,6 +95,11 @@ extern NSString * MA_PBoardType_urln;
 #define MA_Refresh_ReloadFromDatabase	2
 #define MA_Refresh_SortAndRedraw		3
 
+// Growl contexts
+#define MA_GrowlContext_RefreshCompleted	1
+#define MA_GrowlContext_DownloadCompleted	2
+#define MA_GrowlContext_DownloadFailed		3
+
 const AEKeyword EditDataItemAppleEventClass;
 const AEKeyword EditDataItemAppleEventID;
 const AEKeyword DataItemTitle;
